--- a/choose-packaging.html
+++ b/choose-packaging.html
@@ -55,7 +55,7 @@
                 </div>
 
                 <div class="order-preview__summary">
-                    <p class="summary__title h4">Ваш заказ</p>
+                    <p class="summary__title h4">Ваш заказ <span class="read-more" id="showOrderPreview">Подробнее</span></p>
 
                     <ul class="order-list">
                         <li class="item">
@@ -91,11 +91,6 @@
                             <p class="total__cost bold">1140 грн</p>
                         </li>
                     </ul>
-
-                    <div class="order__totals">
-                        <span class="totals__title">Итого:</span>
-                        <span class="totals__cost">0 грн</span>
-                    </div>
                 </div>
             </div>
 
