--- a/choose-flavor.html
+++ b/choose-flavor.html
@@ -10,19 +10,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap" rel="stylesheet">
     <title>Biblioteque</title>
 </head>
-<body class="step--flavor"  data-barba="wrapper">
-
-    <div class="load-container">
-        <div class="loading-screen"></div>
-    </div>
-
-    <div data-barba="container" data-barba-namespace="flavor-section">
-
-    <div id="cursor"><span class="icon-help"></span><span class="icon-pointer"></span></div>
-    <div id="cursor--small"></div>
-
+<body class="step--flavor">
     <div id="overlay"></div>
-
 
     <div class="modal modal--product-details">
         <button class="btn-close btn-reset" id="btn-modal-close"><span class="line--md"></span><span class="line--md"></span></button>
@@ -71,7 +60,7 @@
                 </div>
 
                 <div class="order-preview__summary">
-                    <p class="summary__title h4">Ваш заказ</p>
+                    <p class="summary__title h4">Ваш заказ <span class="read-more" id="showOrderPreview">Подробнее</span></p>
 
                     <ul class="order-list">
                         <li class="item">
@@ -272,7 +261,7 @@
         <div class="footer-buttons">
             <a href="index.html" class="btn-reset btn-link btn-fill btn-prev animate-this">Назад</a>
             <button class="btn-reset btn-link btn-restart hide">Подобрать ещё</button>
-            <a class="btn-link btn-ouline-primary btn-next btn-fill animate-this" href="choose-form.html" disabled>Продолжить</a>
+            <a class="btn-link btn-ouline-primary btn-next btn-fill animate-this" href="choose-form.html" aria-disabled="true" >Продолжить</a>
         </div>
 
         <div class="product-preview__controls hide">
@@ -280,11 +269,9 @@
         </div>
     </footer>
 
-    <script src="https://unpkg.com/@barba/core"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js" integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ==" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/isotope-layout@3/dist/isotope.pkgd.min.js"></script>
     <script src="src/javascript/libraries/isotope/cell-by-column.js"></script>
     <script src="dist/bundle.js"></script>
-</div>
 </body>
 </html>
