--- a/choose-size.html
+++ b/choose-size.html
@@ -55,7 +55,7 @@
                 </div>
 
                 <div class="order-preview__summary">
-                    <p class="summary__title h4">Ваш заказ</p>
+                    <p class="summary__title h4">Ваш заказ <span class="read-more" id="showOrderPreview">Подробнее</span></p>
 
                     <ul class="order-list">
                         <li class="item">
