--- a/index.html
+++ b/index.html
@@ -10,13 +10,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap" rel="stylesheet">
     <title>Biblioteque</title>
 </head>
-<body data-barba="wrapper" class="home">
-    
-    <div class="load-container">
-        <div class="loading-screen"></div>
-    </div>
+<body class="home">
 
-    <div data-barba="container" data-barba-namespace="home-section">
     <div id="overlay"></div>
     
     <div class="features animate-this">
@@ -317,8 +312,6 @@
 
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js" integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ==" crossorigin="anonymous"></script>
-<script src="https://unpkg.com/@barba/core"></script>
     <script src="dist/bundle.js"></script>
-</div>
 </body>
 </html>
