add cabinet && fix bugs

--- a/recovery-pass-page.html
+++ b/recovery-pass-page.html
@@ -228,7 +228,10 @@
 <section class="login">
     <div class="login-container">
 
-        <h1 class="h2 login__title">Восстановление пароля</h1>
+        <div class="login__head">
+            <h1 class="h2 login__title">Восстановление пароля</h1>
+            <a href="index.html" class="btn-close btn-reset show-mobile" id="btn-close"><span class="line--md"></span><span class="line--md"></span></a>
+        </div>
 
         <p class="login__subtitle">
             Не получается войти? Забыли пароль к аккаунту <b>votre.com.ua </b> ? С помощью функции восстановления пароля вы можете заменить забытый пароль на новый.
