--- a/register-page.html
+++ b/register-page.html
@@ -241,7 +241,11 @@
 <section class="login">
     <div class="login-container">
 
-        <h1 class="h2 login__title">Регистрация</h1>
+        <div class="login__head">
+            <h1 class="h2 login__title">Регистрация</h1>
+            <a href="index.html" class="btn-close btn-reset show-mobile" id="btn-close"><span class="line--md"></span><span class="line--md"></span></a>
+        </div>
+
         <form class="login__form">
 
             <div class="input-wrapper">
