--- a/login-page.html
+++ b/login-page.html
@@ -228,7 +228,11 @@
 <section class="login">
     <div class="login-container">
 
-        <h1 class="h2 login__title">Вход</h1>
+        <div class="login__head">
+            <h1 class="h2 login__title">Вход</h1>
+            <a href="index.html" class="btn-close btn-reset show-mobile" id="btn-close"><span class="line--md"></span><span class="line--md"></span></a>
+        </div>
+
         <form class="login__form">
             <div class="input-wrapper">
                 <input type="text" name="email" class="form-input" id="input-email">
