--- a/choose-flavor.html
+++ b/choose-flavor.html
@@ -20,7 +20,10 @@
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Turpis proin est, in id. Lacus mauris ante quam non egestas. Ut libero sed at egestas enim diam risus arcu risus.
         </p>
     </div>
-   
+
+    <div class="progress-line">
+        <div class="line"></div>
+    </div>
     <header class="steps-header">
         <div class="flex-container jc-between animate-this">
             <ul class="steps-list flex">
