--- a/choose-form.html
+++ b/choose-form.html
@@ -29,6 +29,10 @@
             <span class="line--md"></span>
         </button>
     </div>
+
+    <div class="progress-line">
+        <div class="line"></div>
+    </div>
    
     <header class="steps-header">
         <div class="flex-container jc-between">
