--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
 
             <div class="btn-group">
                 <button class="btn-icon" type="button">
-                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <svg class="show-desktop" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M24 25.3333V23.1111C24 21.9324 23.5435 20.8019 22.7308 19.9684C21.9182 19.1349 20.816 18.6667 19.6667 18.6667H11C9.85075 18.6667 8.74855 19.1349 7.93589 19.9684C7.12323 20.8019 6.66669 21.9324 6.66669 23.1111V25.3333" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                         <path d="M24 25.3333V23.1111C24 21.9324 23.5435 20.8019 22.7308 19.9684C21.9182 19.1349 20.816 18.6667 19.6667 18.6667H11C9.85075 18.6667 8.74855 19.1349 7.93589 19.9684C7.12323 20.8019 6.66669 21.9324 6.66669 23.1111V25.3333" stroke="url(#paint0_linear)" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
                         <path d="M15.3334 14.6667C17.9107 14.6667 20 12.5773 20 10C20 7.42267 17.9107 5.33333 15.3334 5.33333C12.756 5.33333 10.6667 7.42267 10.6667 10C10.6667 12.5773 12.756 14.6667 15.3334 14.6667Z" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
@@ -239,7 +239,12 @@
                         <stop offset="1" stop-color="white" stop-opacity="0"/>
                         </linearGradient>
                         </defs>
-                        </svg>
+                    </svg>
+
+                    <svg class="show-mobile" width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M20.3328 15.6422V18.4523C20.3338 18.7132 20.2803 18.9714 20.1756 19.2104C20.0709 19.4495 19.9173 19.664 19.7247 19.8404C19.5321 20.0167 19.3047 20.151 19.057 20.2346C18.8094 20.3182 18.5471 20.3492 18.2867 20.3257C15.3986 20.0125 12.6244 19.0276 10.187 17.4501C7.91929 16.0119 5.99667 14.0931 4.55567 11.8299C2.96949 9.38625 1.98238 6.60406 1.6743 3.70874C1.65085 3.44972 1.6817 3.18865 1.76488 2.94217C1.84806 2.6957 1.98175 2.4692 2.15744 2.27712C2.33313 2.08503 2.54698 1.93156 2.78536 1.82647C3.02374 1.72139 3.28143 1.66699 3.54203 1.66675H6.35769C6.81318 1.66227 7.25476 1.82325 7.60012 2.11967C7.94548 2.41609 8.17105 2.82773 8.2348 3.27786C8.35365 4.17715 8.57404 5.06014 8.89179 5.90998C9.01807 6.24524 9.0454 6.60961 8.97054 6.9599C8.89569 7.31019 8.72179 7.63173 8.46944 7.88641L7.27748 9.07601C8.61356 11.4211 10.5591 13.3627 12.9088 14.6962L14.1008 13.5066C14.356 13.2547 14.6781 13.0812 15.0291 13.0065C15.3801 12.9318 15.7452 12.959 16.0811 13.0851C16.9326 13.4022 17.8174 13.6221 18.7185 13.7408C19.1744 13.8049 19.5908 14.0341 19.8884 14.3847C20.186 14.7353 20.3442 15.1829 20.3328 15.6422Z" stroke="white" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round"/>
+                    </svg>
+
                 </button>
                 <button class="btn-icon" type="button">
                     <svg width="24" height="22" viewBox="0 0 24 22" fill="none" xmlns="http://www.w3.org/2000/svg">
