--- a/thanks.html
+++ b/thanks.html
@@ -11,7 +11,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500&display=swap" rel="stylesheet">
 <title>Biblioteque</title>
 </head>
-<body class="thanks">
+<body class="thanks thanks-page">
     <div id="cursor"></div>
     <div id="cursor--small"></div>
     <div id="overlay"></div>
