--- a/choose-size.html
+++ b/choose-size.html
@@ -17,7 +17,10 @@
 
     <div id="overlay"></div>
 
-   
+    <div class="progress-line">
+        <div class="line"></div>
+    </div>
+
     <header class="steps-header">
         <div class="flex-container jc-between">
             <ul class="steps-list flex">
