--- a/blog.html
+++ b/blog.html
@@ -150,7 +150,7 @@
 
         <div class="header__search-input">
             <div class="input-wrapper">
-                <input type="text" class="form-input icon-search">
+                <input type="text" class="form-input icon-search" placeholder="Поиск">
                 <button class="btn-close btn-reset" id="btn-search-close"><span class="line--md"></span><span class="line--md"></span></button>
             </div>
 
@@ -248,9 +248,10 @@
                             49 парфюмерных брендов. Ароматы на распив от 5 мл и 150 грн. Любимый французский бренд Bibliotheque de Parfum и украинский Votre Parfum. Уходовая косметика Satara и Tesori d`Oriente. Шикарный уход для волос от Ellips
                         </p>
 
-                        <p class="post__date">
-                            27.01.2020
-                        </p>
+                        <div class="post__meta">
+                            <p class="post__date">27.01.2020</p>
+                            <a hre="#" class="post__comments-quantity">Нет комментариев</a>
+                        </div>
 
                         <a href="blog-post.html" class="btn-link btn-outline-primary btn-fill">
                             Подробнее
@@ -270,11 +271,12 @@
                             49 парфюмерных брендов. Ароматы на распив от 5 мл и 150 грн. Любимый французский бренд Bibliotheque de Parfum и украинский Votre Parfum. Уходовая косметика Satara и Tesori d`Oriente. Шикарный уход для волос от Ellips
                         </p>
 
-                        <p class="post__date">
-                            27.01.2020
-                        </p>
+                        <div class="post__meta">
+                            <p class="post__date">27.01.2020</p>
+                            <a hre="#" class="post__comments-quantity">Нет комментариев</a>
+                        </div>
 
-                        <a href="" class="btn-link btn-outline-primary btn-fill">
+                        <a href="blog-post.html" class="btn-link btn-outline-primary btn-fill">
                             Подробнее
                         </a>
                     </div>
@@ -292,11 +294,12 @@
                             49 парфюмерных брендов. Ароматы на распив от 5 мл и 150 грн. Любимый французский бренд Bibliotheque de Parfum и украинский Votre Parfum. Уходовая косметика Satara и Tesori d`Oriente. Шикарный уход для волос от Ellips
                         </p>
 
-                        <p class="post__date">
-                            27.01.2020
-                        </p>
+                        <div class="post__meta">
+                            <p class="post__date">27.01.2020</p>
+                            <a hre="#" class="post__comments-quantity">Нет комментариев</a>
+                        </div>
 
-                        <a href="" class="btn-link btn-outline-primary btn-fill">
+                        <a href="blog-post.html" class="btn-link btn-outline-primary btn-fill">
                             Подробнее
                         </a>
                     </div>
@@ -314,11 +317,12 @@
                             49 парфюмерных брендов. Ароматы на распив от 5 мл и 150 грн. Любимый французский бренд Bibliotheque de Parfum и украинский Votre Parfum. Уходовая косметика Satara и Tesori d`Oriente. Шикарный уход для волос от Ellips
                         </p>
 
-                        <p class="post__date">
-                            27.01.2020
-                        </p>
+                        <div class="post__meta">
+                            <p class="post__date">27.01.2020</p>
+                            <a hre="#" class="post__comments-quantity">Нет комментариев</a>
+                        </div>
 
-                        <a href="" class="btn-link btn-outline-primary btn-fill">
+                        <a href="blog-post.html" class="btn-link btn-outline-primary btn-fill">
                             Подробнее
                         </a>
                     </div>
@@ -336,11 +340,12 @@
                             49 парфюмерных брендов. Ароматы на распив от 5 мл и 150 грн. Любимый французский бренд Bibliotheque de Parfum и украинский Votre Parfum. Уходовая косметика Satara и Tesori d`Oriente. Шикарный уход для волос от Ellips
                         </p>
 
-                        <p class="post__date">
-                            27.01.2020
-                        </p>
+                        <div class="post__meta">
+                            <p class="post__date">27.01.2020</p>
+                            <a hre="#" class="post__comments-quantity">Нет комментариев</a>
+                        </div>
 
-                        <a href="" class="btn-link btn-outline-primary btn-fill">
+                        <a href="blog-post.html" class="btn-link btn-outline-primary btn-fill">
                             Подробнее
                         </a>
                     </div>
@@ -358,11 +363,12 @@
                             49 парфюмерных брендов. Ароматы на распив от 5 мл и 150 грн. Любимый французский бренд Bibliotheque de Parfum и украинский Votre Parfum. Уходовая косметика Satara и Tesori d`Oriente. Шикарный уход для волос от Ellips
                         </p>
 
-                        <p class="post__date">
-                            27.01.2020
-                        </p>
+                        <div class="post__meta">
+                            <p class="post__date">27.01.2020</p>
+                            <a hre="#" class="post__comments-quantity">Нет комментариев</a>
+                        </div>
 
-                        <a href="" class="btn-link btn-outline-primary btn-fill">
+                        <a href="blog-post.html" class="btn-link btn-outline-primary btn-fill">
                             Подробнее
                         </a>
                     </div>
@@ -415,7 +421,7 @@
                                     </div>
 
                                     <div class="item__addresses">
-                                        <span class="icon icon-insta"></span>
+                                        <span class="icon icon-phone"></span>
                                         <a href="tel:+38 (066) 99 21 444" class="address__text store-phone">
                                             +38 (066) 99 21 444
                                         </a>
@@ -442,9 +448,9 @@
                                     </div>
 
                                     <div class="item__addresses">
-                                        <span class="icon icon-insta"></span>
-                                        <a href="tel:+38 (066) 99 21 444" class="address__text store-phone">
-                                            +38 (066) 99 21 444
+                                        <span class="icon icon-website"></span>
+                                        <a href=#" class="address__text">
+                                            bart.com.ua
                                         </a>
                                     </div>
                                 </li>
