--- a/info-page.html
+++ b/info-page.html
@@ -150,7 +150,7 @@
 
         <div class="header__search-input">
             <div class="input-wrapper">
-                <input type="text" class="form-input icon-search">
+                <input type="text" class="form-input icon-search" placeholder="Поиск">
                 <button class="btn-close btn-reset" id="btn-search-close"><span class="line--md"></span><span class="line--md"></span></button>
             </div>
 
