--- a/shop-catalog.html
+++ b/shop-catalog.html
@@ -852,8 +852,13 @@
 <!--                        <div class="grid-sizer"></div>-->
 <!--                        <div class="gutter-sizer"></div>-->
 
-                        <div class="card--product bestsellers woman hair new">
+                        <div class="card--product bestsellers woman hair">
                             <div class="card__body">
+                                <div class="goods-tile">
+                                    <div class="new"></div>
+                                    <div class="hot"></div>
+                                    <div class="hot"></div>
+                                </div>
                                 <div class="card__preview">
                                     <img src="src/images/flavors/flavor-big.jpg" alt="">
                                 </div>
@@ -894,6 +899,11 @@
 
                         <div class="card--product man zodiac hair">
                             <div class="card__body">
+                                <div class="goods-tile">
+                                    <div class="new"></div>
+                                    <div class="hot"></div>
+                                    <div class="hot"></div>
+                                </div>
                                 <div class="card__preview">
                                     <img src="src/images/flavors/flavor-big.jpg" alt="">
                                 </div>
