--- a/blog-post.html
+++ b/blog-post.html
@@ -150,7 +150,7 @@
 
         <div class="header__search-input">
             <div class="input-wrapper">
-                <input type="text" class="form-input icon-search">
+                <input type="text" class="form-input icon-search" placeholder="Поиск">
                 <button class="btn-close btn-reset" id="btn-search-close"><span class="line--md"></span><span class="line--md"></span></button>
             </div>
 
@@ -359,8 +359,8 @@
                         </p>
 
                         <div class="post__footer">
-                            <a class="btn-link btn-outline-primary" type="button">Предыдущая</a>
-                            <a class="btn-link btn-ouline-primary" type="button">Следующая</a>
+                            <a class="btn-link btn-outline-primary btn-fill" type="button">Предыдущая</a>
+                            <a class="btn-link btn-outline-primary btn-fill" type="button">Следующая</a>
                         </div>
                     </div>
                 </div>
